<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/side_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleColor"
                android:padding="10dp"
                android:text="@string/quick_title"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/quick_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleColor"
                android:padding="10dp"
                android:text="@string/brows_title"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ExpandableListView
                android:id="@+id/books_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleColor"
                android:padding="10dp"
                android:text="@string/additional_title"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/additional_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>