<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@android:color/background_light"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo_tehilim" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@color/titleColor"
            android:gravity="start|bottom"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:text="@string/version"
            android:textStyle="bold" />

        <Button
            android:id="@+id/version_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_tehilim"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="2.0.1" />

        <TextView
            android:id="@+id/version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/contact_us_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@color/titleColor"
            android:gravity="start|bottom"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:text="@string/uv_contact_us"
            android:textStyle="bold" />

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_tehilim"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="Facebook"
            android:textColor="@color/facebook_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_tehilim"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/feedback"
            android:textColor="@color/gmail_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/github_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_tehilim"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="View project at Github"
            android:textColor="@color/git_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_background_tehilim"
            android:gravity="start|center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/rate"
            android:textColor="@color/titleColor"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>